--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+.box-shadow {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 .text-on-primary-color {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
